# mqtt-postgres-scrapper

./: README.md  pyproject.toml
client_examples/: python_client_example.py
client_examples/micro_python_co2_mqtt_sensor/: MHZ19BSensor.py  boot.py  main.py
docker/: Dockerfile  docker-compose.yaml
docker/mqtt5/config/: mosquitto.conf  mosquitto.passwd
docker/postgres/: 50-hba.sh
src/scrapper/: __main__.py  mqtt_scraper.py
