[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrapper"
version = "0.1.0"
description = "MQTT PostgreSQL Scrapper"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "paho-mqtt==1.6.1",
    "SQLAlchemy==2.0.7",
    "psycopg2-binary==2.9.10",
    "pytz==2021.3"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = []

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.hatch.build.targets.wheel]
packages = ["src.scrapper"]